assets/css/styles.css
.container-fluid {
  width: 80%;
  max-width: 1700px;
}

body {
  font-family: Verdana, Geneva, Tahoma, sans-serif;
  letter-spacing: .5px;
  background-image: url(../images/Tokyo11.jpg);
  background-repeat: repeat;
}

.projects-header {
  letter-spacing: 15px;
  color: rgb(94, 94, 94);
  font-size: 45px;
}

.non-box-text {
  font-size: 24px;
}

.jumbotron {
  text-align: center;
  font-family: monospace;
  font-weight: lighter;
  background-color: rgba(255, 249, 249, 0);
}

.jumbotron h1 {
  letter-spacing: 20px;
}

.me-img {
  float: left;
  width: 300px;
  margin: 10px;
  border-radius: 10px;
  margin-right: 30px;
}

.clearfix {
  overflow: auto;
}

.card {
  background-color: rgba(31, 80, 109, 0.264);
  font-size: 22px;
}

.gh-button {
  text-align: center;
  font-style: italic;
}

.gh-button a {
  font-size: 50px;
}

a {
  color: rgb(84, 84, 84);
  font-style: normal;
  font-family: monospace;
  font-size: 38px;
  text-decoration: underline;
  letter-spacing: .5px;
}

.title-font .card-title {
  font-family: monospace;
  font-size: 35px;
}

.history {
  color: rgb(37, 37, 37);
  font-size: 25px;
}

.history h2{
  letter-spacing: 20px;
  font-size: 45px;
  color: rgb(72, 72, 72);
  margin-bottom: 10px;
}

.background-color {
  background-color: rgba(255, 255, 255, 0.73);
  width: 100%;
  padding: 18px;
}

.img4 {
  float: center;
  width: 80%;
  border-radius: 10px;
  margin-right: 30px; 
}

.history-img img {
  max-width: 500px;
  max-height: 600px;
  margin: 10px;
  border-radius: 10px;
  margin-right: 30px;
  display: block;
  margin-top: 5px;
}

.img1 {
  float: left;
  margin-bottom: 20px;
}

.img2 {
  float: right;
}
.img3 {
  float: left;
}

